--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
-os:
-  - Visual Studio 2017
-
+image:
+    - Visual Studio 2017
+    - Visual Studio 2015
 configuration:
     - Debug
 
@@ -8,11 +8,17 @@ version: '{build}'
 
 environment:
   matrix:
-  - Toolset: v150
-  - Toolset: v140
-  - Toolset: v120
-  - Toolset: v110
-  - Toolset: v100
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017 
+  Toolset: v150
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+  Toolset: v140
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+  Toolset: v120
+  #################################################
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+  Toolset: v110
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+  Toolset: v100
 
 platform:
   - Win32
