--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,11 +9,11 @@ environment:
     Toolset: v150
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     Toolset: v140
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    Toolset: v120
+  #- APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+  #  Toolset: v120
   #################################################
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    Toolset: v110
+  #- APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+  #  Toolset: v110
   #- APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
   #  Toolset: v100
 
