- remove extra path for trivially copyable iterators (needs to test optimization first) - re-enable older compilers

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,13 +9,13 @@ environment:
     Toolset: v150
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     Toolset: v140
-  #- APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-  #  Toolset: v120
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    Toolset: v120
   #################################################
-  #- APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-  #  Toolset: v110
-  #- APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-  #  Toolset: v100
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    Toolset: v110
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    Toolset: v100
 
 platform:
   - Win32
