--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,10 +12,10 @@ environment:
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     Toolset: v120
   #################################################
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    Toolset: v110
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    Toolset: v100
+  #- APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+  #  Toolset: v110
+  #- APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+  #  Toolset: v100
 
 platform:
   - Win32
