- use catch1 for older compilers - some cmake cleanup

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,10 +19,16 @@ if (NOT CATCH_INCLUDE_DIR)
     include(ExternalProject)
     find_package(Git REQUIRED)
     
+    set(BRANCH "master")
+	if (MSVC_VERSION LESS 1900)
+		set(BRANCH "Catch1.x") #catch2 needs C++11
+    endif()
+    
     ExternalProject_Add(
         catch
         PREFIX ${CMAKE_BINARY_DIR}/catch
         GIT_REPOSITORY https://github.com/philsquared/Catch.git
+        GIT_TAG ${BRANCH}
         TIMEOUT 10
         UPDATE_COMMAND ${GIT_EXECUTABLE} pull
         CONFIGURE_COMMAND ""
@@ -36,8 +42,13 @@ if (NOT CATCH_INCLUDE_DIR)
 endif()
 
 include_directories(${CATCH_INCLUDE_DIR} "../")
+
+include(CTest)
 enable_testing(true)  # Enables unit-testing.
 
 add_test(NAME any_iterator_tests COMMAND tests)
 
-set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT tests) #requires cmake 3.6
+if (MSVC)
+    target_compile_definitions(tests PUBLIC CATCH_CONFIG_WINDOWS_CRTDBG)
+    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT tests)
+endif()
