--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ set(SRCS
  "basic.cpp"
  "main.cpp")
 
-add_executable(tests "../any_iterator.hpp" ${SRCS})
+add_executable(tests "../any_iterator.hpp;../Readme.md" ${SRCS})
 if (MSVC)
     target_compile_definitions(tests PUBLIC CATCH_CONFIG_WINDOWS_CRTDBG)
 endif()
@@ -50,8 +50,9 @@ add_test(NAME any_iterator_tests COMMAND tests)
 
 find_package(benchmark QUIET)
 if (benchmark_FOUND)
-    add_executable(any_iter_benchmark "../any_iterator.hpp;any_iterator_virtual.hpp" "benchmark.cpp")
+    add_executable(any_iter_benchmark "../any_iterator.hpp;any_iterator_virtual.hpp" "benchmark.cpp" "performance.md")
     target_link_libraries(any_iter_benchmark PUBLIC benchmark::benchmark)
+	include_external_msproject(benchmark_plotter "${CMAKE_CURRENT_SOURCE_DIR}/benchmark_plotter.pyproj" TYPE 888888a0-9f3d-457c-b088-3a5042f75d52 GUID 4d9723ef-7dfd-4dd0-9c08-5c530557b25e)
 endif()
 
 if (MSVC)
